objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Text Field -18 digit id the account associated with the contact</description>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id_Dev__c</fullName>
        <formula>CASESAFEID( Contact.AccountId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id Dev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Limit__c</fullName>
        <label>Account Limit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement_Clicked_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Announcement Box is closed in the Community Page it should not open again if a user is logged in.</description>
        <label>Announcement Clicked Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Approval_Manager__c</fullName>
        <description>Created for CPQ Implementation. Default value should match the manager field and we can be updated if needed</description>
        <label>CPQ Approval Manager</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.CPQ_Approval_Manager__c</field>
                <operation>equals</operation>
                <valueField>$User.ManagerId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <relationshipName>User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>CPQ_Approval_VP__c</fullName>
        <description>Used in CPQ Implementation for approval process.</description>
        <label>CPQ Approval VP</label>
        <relationshipName>User1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>CPQ_Freeze_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ Freeze Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommunityContactId__c</fullName>
        <description>Field to bring contact id from contact lookup. This is done to remove the dependency on text contact id field on user object to make sure the Docebo sync does not fail.</description>
        <formula>Contact.Contact_18_digit_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to bring contact id from contact lookup. This is done to remove the dependency on text contact id field on user object to make sure the Docebo sync does not fail.</inlineHelpText>
        <label>CommunityContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactGUID__c</fullName>
        <formula>Contact.GUI_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactGUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNameDev__c</fullName>
        <formula>Contact.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactNameDev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fed_ID__c</fullName>
        <formula>Contact.Federation_ID__c</formula>
        <label>Contact Fed ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Text Field - 18 digit id of the contact associated with user (#11123550)</description>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_User_Id__c</fullName>
        <inlineHelpText>Stores Docusign user Id for the auto user deactivation tool.</inlineHelpText>
        <label>DocuSign User Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_User_Name__c</fullName>
        <formula>FirstName  &amp; "." &amp;  LastName</formula>
        <label>Eloqua - User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_EBS_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to control if any inserts/updates made by this user would trigger a sync with EBS (integration queue)</description>
        <inlineHelpText>Flag to control if any inserts/updates made by this user would trigger a sync with EBS (integration queue)</inlineHelpText>
        <label>Enable EBS Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exempted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used in Deactivation of user using batch class</description>
        <label>Exempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HL_Mod_Date__c</fullName>
        <description>Bring the HL Mod Date from Contact to User so this field can be used to apply filter on users syncing to Docebo. This can be used for other purposes as well.</description>
        <formula>Contact.HL_Mod_Date__c</formula>
        <inlineHelpText>Bring the HL Mod Date from Contact to User so this field can be used to apply filter on users syncing to Docebo. This can be used for other purposes as well.</inlineHelpText>
        <label>HL_Mod_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IgnoreValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users with this set will ignore validation rules</description>
        <label>Ignore Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Irregular__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Irregular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GDPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GDPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Groups__c</fullName>
        <description>Field to populate the tags for which automatic training can be assigned to users in LMS. This field can be populated from various sources. Currently, it's being populated from Product Mix and Mobile App.</description>
        <inlineHelpText>Field to populate the tags for which automatic training can be assigned to users in LMS. This field can be populated from various sources. Currently, it's being populated from Product Mix and Mobile App.</inlineHelpText>
        <label>LMS Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LMS_Sync_Date__c</fullName>
        <description>Data to capture the last update date on LMS Synced Fields. Sync will happen for fields having current (today's) sync date. Currently being used for sync with Docebo LMS.</description>
        <inlineHelpText>Data to capture the last update date on LMS Synced Fields. Sync will happen for fields having current (today's) sync date. Currently being used for sync with Docebo LMS.</inlineHelpText>
        <label>LMS Sync Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <description>Lanyon Migrated ID</description>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lanyon Migrated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lanyon_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lanyon User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Lanyon_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Lanyon User ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_QM_User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is created to store the Legacy User ID of Migrated Users from QuickMobile Instance</description>
        <externalId>true</externalId>
        <label>Legacy QM User ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Manager.Email</formula>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <formula>IF(Email = "zmahmood@cvent.com", "USA", Country)</formula>
        <label>Office Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Unit__c</fullName>
        <label>Operating Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoURL__c</fullName>
        <description>Captures URL of profile of user</description>
        <label>PhotoURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prev_Role__c</fullName>
        <label>Prev Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Monthly__c</fullName>
        <label>Quota - Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_Quarterly__c</fullName>
        <label>Quota - Quarterly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_Yearly__c</fullName>
        <label>Quota - Yearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Read_Only_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_User_Name__c</fullName>
        <label>Reference User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ST_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ST User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Tier__c</fullName>
        <label>Sales Rep - Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 1 India</fullName>
                </value>
                <value>
                    <fullName>Tier 2 India</fullName>
                </value>
                <value>
                    <fullName>Tier 3 India</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Level_Manager_Email__c</fullName>
        <formula>Manager.Manager.Email</formula>
        <label>Second Level Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Level_Manager__c</fullName>
        <formula>Manager.Manager.FirstName &amp; " " &amp; Manager.Manager.LastName</formula>
        <label>Second Level Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Cloud_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Cloud (Reporting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowLitmosTab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just used for the Dark Release. Can be deleted in the future once Litmos is live for all Community User.</description>
        <label>ShowLitmosTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Division__c</fullName>
        <label>Sub Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Litmos_Checked__c</fullName>
        <label>Sync Litmos Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System / Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testing User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_18_digit_id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>User 18 digit id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role_Custom__c</fullName>
        <description>This field is referenced in 
1. Price Rules</description>
        <formula>UserRole.Name</formula>
        <label>User Role Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To bypass from Opp validations</description>
        <label>Validation Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vishal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vishal</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>License__c</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales Representative - DS</value>
        </filters>
        <label>Profile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Docebo_Users_Sync</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Contact_ID__c</columns>
        <columns>User_18_digit_id__c</columns>
        <columns>LMS_Groups__c</columns>
        <columns>HL_Mod_Date__c</columns>
        <columns>LMS_Sync_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Cvent Customer Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account_ID__c</field>
            <operation>notContain</operation>
            <value>0011N000017pHTt</value>
        </filters>
        <filters>
            <field>LMS_Sync_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Docebo Users Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Docebo_Users_Sync_MG</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Contact_ID__c</columns>
        <columns>User_18_digit_id__c</columns>
        <columns>LMS_Groups__c</columns>
        <columns>HL_Mod_Date__c</columns>
        <columns>LMS_Sync_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Cvent Customer Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account_ID__c</field>
            <operation>notContain</operation>
            <value>0011N000017pHTt</value>
        </filters>
        <filters>
            <field>LMS_Sync_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/16/2019</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/16/2019 12:00 AM</value>
        </filters>
        <label>Docebo Users Sync - MG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Freeze_User_view1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQ_Freeze_Exempt__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>License__c</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filters>
        <label>Freeze User view</label>
        <language>en_US</language>
        <sharedTo>
            <group>CRM_Management_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>cvent.com</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>overage</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Inactive Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>ALL_SOPs_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sales Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3 and 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Community User,Portal User</value>
        </filters>
        <label>DocuSign Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Community_user_cant_change_Email_Addres</fullName>
        <active>true</active>
        <description>From Anuj - Vishal note access to update is with the rep to a large extent still, can we lock it down further so this is a controlled environment</description>
        <errorConditionFormula>AND
(

$User.ProfileId ="00e00000006qrXm",
ISCHANGED(Email),
NOT($User.Username = "jhall@cvent.com"),
NOT(CONTAINS($User.LastName,"Sops"))
)</errorConditionFormula>
        <errorMessage>You can't change email address, please contact your administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federation_ID_Lengh_Validation</fullName>
        <active>true</active>
        <description>This validation is requested in Case#10599318</description>
        <errorConditionFormula>AND( 

TEXT(UserType) = "CspLitePortal", 

NOT(ISBLANK(FederationIdentifier)), 

NOT(REGEX(FederationIdentifier, "[A-Z0-9]{11}")),

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))

)</errorConditionFormula>
        <errorDisplayField>FederationIdentifier</errorDisplayField>
        <errorMessage>Invalid Federation ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Department_and_Manager</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(UserType,"Standard"),
OR(
ISBLANK(ManagerId),
ISBLANK(Department)),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c /*Added to bypass rollup helper updates */
)</errorConditionFormula>
        <errorDisplayField>EmailPreferences</errorDisplayField>
        <errorMessage>Please update Manager and Department.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_should_not_change_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(Email), 
$User.License__c = 'Customer Community Login' ,NOT(ISNEW()) )</errorConditionFormula>
        <errorMessage>You are not authorized to change email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Users_Cant_edit_fields</fullName>
        <active>true</active>
        <description>From Anuj - Vishal note access to update is with the rep to a large extent still, can we lock it down further so this is a controlled environment</description>
        <errorConditionFormula>AND(

OR(
ISCHANGED(FirstName),
ISCHANGED(LastName),
ISCHANGED(Alias),
ISCHANGED(ProfileId),
ISCHANGED(CommunityNickname),
ISCHANGED(CompanyName),
ISCHANGED(UserRoleId),
ISCHANGED(Email)),

TEXT(UserType) = "Standard",

$User.ProfileId &lt;&gt;"00e2G000001EHls",
$User.ProfileId &lt;&gt;"00e00000006olj1",/*System Administrator*/

NOT(CONTAINS($User.FirstName,"Automated")),

NOT(CONTAINS($User.LastName,"Sops"))

)</errorConditionFormula>
        <errorMessage>You don't have access to edit these fields, please contact your system administrator.</errorMessage>
    </validationRules>
</CustomObject>